--- a/app/assets/stylesheets/table/table_panel/layer-views-panels/wizard_panel.css.scss
+++ b/app/assets/stylesheets/table/table_panel/layer-views-panels/wizard_panel.css.scss
@@ -220,7 +220,7 @@
           overflow:hidden;
           display:block;
           width:100%;
-          padding:12px 0;
+          padding: 6px 0;
           
 
           & > span:first-child {
